[TASK] Update composer

--- a/composer.json
+++ b/composer.json
@@ -15,19 +15,14 @@
     "homepage": "https://github.com/koninklijke-collective/my_user_management",
     "license": "LGPL-3.0+",
     "require": {
-        "typo3/cms-core": "11.*@dev",
-        "typo3/cms-beuser": "11.*@dev"
+        "typo3/cms-core": "^12.0",
+        "typo3/cms-beuser": "^12.0"
     },
     "require-dev": {
-        "typo3/cms-install": "11.*@dev",
-        "typo3/cms-about": "11.*@dev",
-        "typo3/testing-framework": "^6.3.3",
         "codeception/codeception": "^4.1",
         "codeception/module-webdriver": "^1.1",
         "codeception/module-asserts": "^1.2",
-        "typo3/coding-standards": "^0.2.0",
-        "phpstan/phpstan": "^0.12.37",
-        "typo3/tailor": "^1.2"
+        "phpstan/phpstan": "^0.12.37"
     },
     "config": {
         "vendor-dir": ".Build/vendor",
